<resources>
    <string name="app_name">Parada</string>

    <string name="main">Главная</string>
    <string name="services">Услуги</string>
    <string name="doctors">Специалисты</string>
    <string name="prices">Цены</string>
    <string name="events">Акции и новости</string>
    <string name="socials">Социальные сети</string>
    <string name="notifications">Уведомления</string>
    <string name="contacts">Контакты</string>

    <string name="subscribe">Запись на приём</string>

    <string name="first_middle_name" formatted="false">%s %s</string>
    <string name="doctor_position">• %s</string>
    <string name="news">Новости</string>
    <string name="all_news">Все новости</string>
    <string name="search">Поиск</string>

    <string name="phone">Телефон</string>
    <string name="sms">Сообщения</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="viber">Viber</string>
    <string name="phone_number">+78123372303</string>
    <string name="message_number">+79315410591</string>
    <string name="watch_video">Смотреть видео</string>
    <string name="service">Услуга</string>
    <string name="cost">Cтоимость</string>
    <string name="actions">Акции</string>

    <string name="facebook">Facebook</string>
    <string name="vkontakte">Vkontakte</string>
    <string name="youtube">YouTube</string>
    <string name="instagram">Intagram</string>

    <string name="order_call">Заказать звонок</string>
    <string name="subscribe_reception">Записаться на приём</string>

    <string name="video">Видео</string>
    <string name="video_operation">Видео операции</string>

    <string name="send">Отправить</string>
    <string name="wish_date">Желаемая дата приёма</string>
    <string name="date_hint">ДД.ММ.ГГГГ</string>
    <string name="wish_time">Желаемое время приёма</string>
    <string name="time_hint">ЧЧ.ММ</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="email">Почта</string>
    <string name="email_hint">e-mail</string>
    <string name="phone_hint">+7</string>
    <string name="comment">Примечание</string>
    <string name="wish_date_empty">Укажите дату приёма</string>
    <string name="wish_time_empty">Укажите время</string>
    <string name="last_name_empty">Укажите фамилию</string>
    <string name="first_name_empty">Укажите имя</string>
    <string name="middle_name_empty">Укажите отчество</string>
    <string name="email_empty">Укажите почту</string>
    <string name="phone_empty">Укажите телефон</string>
    <string name="check_data">Проверка данных</string>
    <string name="send_subscribe_data_error">При отправке данных произошла ошибка</string>
    <string name="date_reception">Дата приёма</string>
    <string name="time_reception">Время приёма</string>
    <string name="lfmname">ФИО</string>
    <string name="we_call_confirm_subscribe">Мы свяжемся с Вами в ближайшее время для подтверждения заявки на приём.</string>
    <string name="error">Ошибка</string>
    <string name="video_error">При воспроизведении видео произошла ошибка. Попробовать снова?</string>
    <string name="address_baltmed">Санкт-Петербург. ВО, Нахимова, 11</string>
    <string name="surgery_phone">+7 (812) 337-23-03\n+7 (931) 541-05-91</string>
    <string name="surgery_name">Центр пластической хирургии</string>
    <string name="baltmed_name">Амбулаторный комплекс BaltMed</string>
    <string name="surgery_work_time">(круглосуточно)</string>
    <string name="surgery_mail">paradaplastika@gmail.com</string>
    <string name="surgery_address">Санкт-Петербург. ВО, Галерный проезд, 5</string>
    <string name="baltmed_phone">+7 (812) 337-23-03\n+7 (812) 331-5-331</string>
    <string name="baltmed_work_time">(с 08 до 22, без выходных)</string>
    <string name="baltmed_address">Санкт-Петербург. ВО, Нахимова, 11</string>
    <string name="baltmed_mail">3372303@mail.ru</string>
    <string name="prices_footer_text">*Указанная стоимость не является публичной офертой и может отличаться от утвержденного прейскуранта. Пожалуйста, уточняйте стоимость у администратора клиники.</string>
    <string name="whatsapp_open_error">Приложение WhatsApp не установлено</string>
    <string name="phone_copy_clipboard">Номер скопирован в буфер обмена</string>
    <string name="viber_open_error">Приложение Viber не установлено</string>
    <string name="viber_pack">com.viber.voip</string>
    <string name="whatsapp_pack">com.whatsapp</string>
    <string name="facebook_url">https://www.facebook.com/paradaplastika</string>
    <string name="vkontakte_url">http://vk.com/club30319557</string>
    <string name="youtube_url">http://www.youtube.com/channel/UCkG-5C9YExPR1p3VI3USaDA</string>
    <string name="instagram_url">http://instagram.com/paradanewsblock</string>
    <string name="map">Карта</string>
    <string name="surgery_web">paradaplastika.ru</string>
    <string name="baltmed_web">baltclinicvo.ru</string>
    <string name="surgery_phone_to_call">+78123372304</string>
    <string name="baltmed_phone_to_call">+78123372303</string>
    <string name="surgery_link">http://paradaplastika.ru</string>
    <string name="baltmed_link">http://www.baltclinicvo.ru</string>
    <string name="requestcall">Заказать звонок</string>
    <string name="contactface">Контактное лицо</string>
    <string name="contactface_hint">ФИО</string>
    <string name="contactface_empty">Заполните контактные данные</string>
    <string name="requestcall_lable">Заказ звонка</string>
    <string name="we_call_confirm_requestcall">Мы свяжемся с Вами в ближайшее время. Спасибо.</string>
    <string name="info">Информация для пациентов</string>
    <string name="info_menu">Для пациентов</string>
    <string name="services_list_empty">Список услуг пуст</string>
    <string name="doctors_list_empty">Список специалистов пуст</string>
    <string name="videos_list_empty">Список видео пуст</string>
    <string name="prices_list_empty">Список цен пуст</string>
    <string name="news_list_empty">Список новостей пуст</string>
    <string name="actions_list_empty">Список акций пуст</string>
    <string name="info_list_empty">Список пуст</string>
    <string name="price_postfix">р.</string>

    <string-array name="months">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>
    <string-array name="weekdays">
        <item>понедельник</item>
        <item>вторник</item>
        <item>среда</item>
        <item>четверг</item>
        <item>пятница</item>
        <item>суббота</item>
        <item>воскресенье</item>
    </string-array>
</resources>