<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:clickable="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/toolbar_icon"
            android:layout_height="@dimen/toolbar_icon"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/toolbar_icon_padding"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_back"
            android:tint="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lines="1"
            android:ellipsize="end"
            android:paddingLeft="56dp"
            android:paddingRight="56dp"
            android:text="@string/subscribe"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"/>
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/wish_date"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size"
                android:textColor="@color/gray"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ru.parada.app.units.LostFocusEdit
                android:id="@+id/wish_date"
                android:inputType="textFilter"
                android:textColor="@color/graydark"
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/date_hint"
                android:textColorHint="@color/graylight"
                android:background="@drawable/edit"
                android:gravity="left"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="10"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <TextView
                android:text="@string/wish_time"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size"
                android:textColor="@color/gray"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ru.parada.app.units.LostFocusEdit
                android:id="@+id/wish_time"
                android:inputType="textFilter"
                android:textColor="@color/graydark"
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/time_hint"
                android:textColorHint="@color/graylight"
                android:background="@drawable/edit"
                android:gravity="left"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="5"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <TextView
                android:text="@string/last_name"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size"
                android:textColor="@color/gray"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ru.parada.app.units.LostFocusEdit
                android:id="@+id/last_name"
                android:inputType="textFilter"
                android:textColor="@color/graydark"
                android:textSize="@dimen/text_size_medium"
                android:background="@drawable/edit"
                android:gravity="left"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="48"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <TextView
                android:text="@string/first_name"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size"
                android:textColor="@color/gray"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ru.parada.app.units.LostFocusEdit
                android:id="@+id/first_name"
                android:inputType="textFilter"
                android:textColor="@color/graydark"
                android:textSize="@dimen/text_size_medium"
                android:background="@drawable/edit"
                android:gravity="left"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="48"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <TextView
                android:text="@string/middle_name"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size"
                android:textColor="@color/gray"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ru.parada.app.units.LostFocusEdit
                android:id="@+id/middle_name"
                android:inputType="textFilter"
                android:textColor="@color/graydark"
                android:textSize="@dimen/text_size_medium"
                android:background="@drawable/edit"
                android:gravity="left"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="48"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <TextView
                android:text="@string/email"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size"
                android:textColor="@color/gray"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ru.parada.app.units.LostFocusEdit
                android:id="@+id/email"
                android:inputType="textFilter"
                android:textColor="@color/graydark"
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/email_hint"
                android:textColorHint="@color/graylight"
                android:background="@drawable/edit"
                android:gravity="left"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="48"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <TextView
                android:text="@string/phone"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size"
                android:textColor="@color/gray"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ru.parada.app.units.LostFocusEdit
                android:id="@+id/phone"
                android:inputType="textFilter"
                android:textColor="@color/graydark"
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/phone_hint"
                android:textColorHint="@color/graylight"
                android:background="@drawable/edit"
                android:gravity="left"
                android:singleLine="true"
                android:lines="1"
                android:maxLength="48"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <TextView
                android:text="@string/comment"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size"
                android:textColor="@color/gray"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ru.parada.app.units.LostFocusEdit
                android:id="@+id/comment"
                android:textColor="@color/graydark"
                android:textSize="@dimen/text_size_medium"
                android:background="@drawable/edit"
                android:gravity="left"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

            <TextView
                android:id="@+id/send"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_width="228dp"
                android:layout_height="@dimen/container_height_medium"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/accent_round"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>