<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/call_dialog_back"
              android:padding="8dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/phone"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/call_button"
            android:layout_margin="6dp"
            android:layout_width="64dp"
            android:layout_height="64dp"/>
        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sms"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/sms_button"
            android:layout_margin="6dp"
            android:layout_width="64dp"
            android:layout_height="64dp"/>
        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:text="@string/sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/whatsapp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/whatsapp_button"
            android:layout_margin="6dp"
            android:layout_width="64dp"
            android:layout_height="64dp"/>
        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:text="@string/whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/viber"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/viber_button"
            android:layout_margin="6dp"
            android:layout_width="64dp"
            android:layout_height="64dp"/>
        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:text="@string/viber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>