<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/toolbar_icon"
                android:layout_height="@dimen/toolbar_icon"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/toolbar_icon_padding"
                android:scaleType="fitCenter"
                android:src="@mipmap/icon_back"
                android:tint="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:paddingLeft="56dp"
                android:paddingRight="56dp"
                android:text="@string/check_data"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/graylight"
            android:gravity="center"
            android:text="@string/requestcall_lable"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_medium"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/lfmname"
                        android:textAllCaps="true"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/gray"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/name"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/graydark"
                        android:layout_marginBottom="16dp"
                        android:lines="2"
                        android:ellipsize="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/phone"
                        android:textAllCaps="true"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/gray"
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/phone"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/graydark"
                        android:layout_marginBottom="16dp"
                        android:singleLine="true"
                        android:lines="1"
                        android:ellipsize="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/send"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="228dp"
                    android:layout_height="@dimen/container_height_medium"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/accent_round"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium"/>
                <TextView
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/we_call_confirm_requestcall"
                    android:gravity="center"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/waiter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@color/black"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</FrameLayout>